<resources>
    <string name="app_name">Biztil</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Iam">Iam</string>
    <string name="Buyer">Buyer</string>
    <string name="Seller">Seller</string>
    <string name="Service_Provider">Service Provider</string>
    <string name="your_fullname">Your Fullname</string>
    <string name="your_mobile_num">Your Mobile No.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="or_signup_with">OR SIGN UP WITH</string>
    <string name="business_name">Business Name</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string-array name="business_type">
        <item>Retailer</item>
        <item>Exporter</item>
        <item>Importer</item>
        <item>Manufacturer</item>
        <item>Service Provider</item>
        <item>Wholesaler/Distributor</item>
        <item>Supplier</item>
        <item>Trading Company</item>
    </string-array>

</resources>
