<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_signup_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        >

        <ImageView
            android:id="@+id/biztil_logo_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/b_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/biztil_logo_iv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:paddingBottom="3dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/large_textsize"
            android:id="@+id/act_login_sigin_tv"/>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/middle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@+id/top_layout"
        android:gravity="center"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/act_login_email_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textAppearance="@style/TextAppearance.App.TextInputLayout"
            android:textSize="@dimen/normal_textsize"
            app:met_validateOnFocusLost="true"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="@color/black"
            app:met_iconLeft="@mipmap/emailselected"
            app:met_floatingLabelTextSize="@dimen/normal_textsize"
            app:met_iconPadding="-5dp"
            app:met_autoValidate="true"
            android:inputType="textEmailAddress"
            app:met_baseColor="@color/selected_color"
            app:met_floatingLabelAnimating="true"
            app:met_primaryColor="@color/selected_color"
            app:met_textColor="@color/selected_color"
            app:met_textColorHint="@color/unselected_color"
            app:met_underlineColor="@color/unselected_color"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/act_login_email_edt"
            app1:hintEnabled="false"
            app1:passwordToggleDrawable="@mipmap/show"
            app1:passwordToggleEnabled="true"
            app1:passwordToggleTint="@color/black"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            >

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/act_login_password_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textSize="@dimen/normal_textsize"
                app:met_autoValidate="true"
                app:met_validateOnFocusLost="true"
                app:met_floatingLabel="normal"
                app:met_floatingLabelTextColor="@color/black"
                app:met_floatingLabelTextSize="@dimen/normal_textsize"
                app:met_iconLeft="@mipmap/passwordselected"
                app:met_iconPadding="-5dp"
                app:met_primaryColor="@color/selected_color"
                app:met_baseColor="@color/selected_color"
                app:met_textColor="@color/selected_color"
                app:met_textColorHint="@color/unselected_color"
                app:met_floatingLabelAnimating="true"
                app:met_underlineColor="@color/unselected_color"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/act_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPasswordLayout"
            android:background="@drawable/round_corner_blue_btn"
            android:text="@string/login"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/act_login_forgot_pass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/unselected_color"
            android:textSize="@dimen/small_textsize"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/act_login_new_acc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/create_new_account"
            android:textColor="@color/unselected_color"
            android:textSize="@dimen/small_textsize"
            tools:ignore="RelativeOverlap,RtlHardcoded"/>


    </RelativeLayout>


</RelativeLayout>
