<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_signup_bg"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        >

        <ImageView
            android:id="@+id/act_signup_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="20dp"
            android:src="@mipmap/back"/>

        <TextView
            android:id="@+id/act_signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@+id/act_pinfo_back_iv"
            android:text="Sign Up"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_textsize"/>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/act_signup_iam_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="20dp"
                    android:src="@mipmap/iamselected"/>

                <TextView
                    android:id="@+id/act_signup_iam_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/act_signup_iam_iv"
                    android:text="Iam"
                    android:textColor="@color/unselected_color"
                    android:textSize="@dimen/normal_textsize"/>


                <LinearLayout
                    android:id="@+id/act_signup_iam_rg"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/act_signup_iam_tv"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/act_signup_buyer_cb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:button="@drawable/radio_btn_selector"
                        android:checked="true"
                        android:padding="10dp"
                        android:text="Buyer"
                        android:textColor="@color/black"
                        android:textSize="15dp"/>

                    <CheckBox
                        android:id="@+id/act_signup_seller_cb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:button="@drawable/radio_btn_selector"
                        android:checked="false"
                        android:padding="10dp"
                        android:text="Seller"
                        android:textColor="@color/black"
                        android:textSize="15dp"/>

                    <CheckBox
                        android:id="@+id/act_signup_servicepro_cb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:button="@drawable/radio_btn_selector"
                        android:checked="false"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:text="Service Provider"
                        android:textColor="@color/black"
                        android:textSize="15dp"/>

                </LinearLayout>


            </RelativeLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/act_signup_name_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_fullname"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textSize="@dimen/normal_textsize"
                app:met_autoValidate="true"
                app:met_baseColor="@color/selected_color"
                app:met_floatingLabel="normal"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabelTextColor="@color/black"
                app:met_floatingLabelTextSize="@dimen/normal_textsize"
                app:met_iconLeft="@mipmap/nameselected"
                app:met_iconPadding="-5dp"
                app:met_primaryColor="@color/selected_color"
                app:met_textColor="@color/selected_color"
                app:met_textColorHint="@color/unselected_color"
                app:met_underlineColor="@color/unselected_color"
                app:met_validateOnFocusLost="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/act_signup_mobileno_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_mobile_num"
                android:inputType="phone"
                android:textAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textSize="@dimen/normal_textsize"
                app:met_autoValidate="true"
                app:met_baseColor="@color/selected_color"
                app:met_floatingLabel="normal"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabelTextColor="@color/black"
                app:met_floatingLabelTextSize="@dimen/normal_textsize"
                app:met_iconLeft="@mipmap/mobileselected"
                app:met_iconPadding="-5dp"
                app:met_primaryColor="@color/selected_color"
                app:met_textColor="@color/selected_color"
                app:met_textColorHint="@color/unselected_color"
                app:met_underlineColor="@color/unselected_color"
                app:met_validateOnFocusLost="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/act_sign_up_email_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textSize="@dimen/normal_textsize"
                app:met_autoValidate="true"
                app:met_baseColor="@color/selected_color"
                app:met_floatingLabel="normal"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabelTextColor="@color/black"
                app:met_floatingLabelTextSize="@dimen/normal_textsize"
                app:met_iconLeft="@mipmap/emailselected"
                app:met_iconPadding="-5dp"
                app:met_primaryColor="@color/selected_color"
                app:met_textColor="@color/selected_color"
                app:met_textColorHint="@color/unselected_color"
                app:met_underlineColor="@color/unselected_color"
                app:met_validateOnFocusLost="true"/>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/act_signup_password_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textSize="@dimen/normal_textsize"
                app:met_autoValidate="true"
                app:met_baseColor="@color/selected_color"
                app:met_floatingLabel="normal"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabelTextColor="@color/black"
                app:met_floatingLabelTextSize="@dimen/normal_textsize"
                app:met_iconLeft="@mipmap/passwordselected"
                app:met_iconPadding="-5dp"
                app:met_primaryColor="@color/selected_color"
                app:met_textColor="@color/selected_color"
                app:met_textColorHint="@color/unselected_color"
                app:met_underlineColor="@color/unselected_color"
                app:met_validateOnFocusLost="true"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/act_signup_gender_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="20dp"
                    android:src="@mipmap/gender_selected"/>

                <RadioGroup
                    android:id="@+id/act_signup_gender_rg"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/act_signup_gender_iv"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/act_signup_male_rb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:checked="true"
                        android:padding="10dp"
                        android:text="@string/male"
                        android:textColor="@color/black"
                        android:textSize="15dp"/>

                    <RadioButton
                        android:id="@+id/act_signup_female_rb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:checked="false"
                        android:padding="10dp"
                        android:text="@string/female"
                        android:textColor="@color/black"
                        android:textSize="15dp"/>


                </RadioGroup>

            </RelativeLayout>

            <Button
                android:id="@+id/act_signup_register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPasswordLayout"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/round_corner_blue_btn"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/act_signup_txt_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_toRightOf="@+id/act_signup_iam_iv"
                android:text="@string/or_signup_with"
                android:textColor="@color/unselected_color"
                android:textSize="@dimen/normal_textsize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/act_signup_twitter_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:src="@mipmap/twitter"/>

                <ImageView
                    android:id="@+id/act_signup_fb_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:src="@mipmap/fb"/>

                <ImageView
                    android:id="@+id/act_signup_gplus_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:src="@mipmap/gplus"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
